finishing update user API
